--- a/.gitignore
+++ b/.gitignore
@@ -135,3 +135,4 @@ UpgradeLog*.htm
 # SQL Server files
 App_Data/*.mdf
 App_Data/*.ldf
+Templates/GeneralPluginWizard/microsoft.visualstudio.templatewizard.dll
