--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,5 @@ UpgradeLog*.htm
 App_Data/*.mdf
 App_Data/*.ldf
 Templates/GeneralPluginWizard/microsoft.visualstudio.templatewizard.dll
+*.lock
+*.vsidx
