--- a/Templates/GeneralPluginWizard/GeneralPluginWizard.csproj
+++ b/Templates/GeneralPluginWizard/GeneralPluginWizard.csproj
@@ -39,12 +39,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EnvDTE, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Microsoft Visual Studio 9.0\Common7\IDE\PublicAssemblies\EnvDTE.dll</HintPath>
+    <Reference Include="envdte90, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+      <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
-    <Reference Include="microsoft.visualstudio.templatewizard">
-      <HintPath>.\microsoft.visualstudio.templatewizard.dll</HintPath>
+    <Reference Include="Microsoft.VisualStudio.TemplateWizard">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Microsoft Visual Studio\2022\Community\Common7\IDE\Microsoft.VisualStudio.TemplateWizard.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
