--- a/.gitignore
+++ b/.gitignore
@@ -135,8 +135,10 @@ UpgradeLog*.htm
 # SQL Server files
 App_Data/*.mdf
 App_Data/*.ldf
-Templates/GeneralPluginWizard/microsoft.visualstudio.templatewizard.dll
 *.lock
 *.vsidx
 *.json
 *.sqlite
+
+#.vs directories
+Templates/GeneralPluginTemplate/.vs/*
